test/classes/initializers/named-argument-to-send-this-bad.good
named-argument-to-send-this-bad.chpl:4: In initializer:
named-argument-to-send-this-bad.chpl:5: error: can't pass "this" as an actual to a function during phase 1 of initialization
